이진 탐색 실전문제

--- a/Book-이것이코테다/5. 이진탐색/7 이진탐색 이론.ipynb
+++ b/Book-이것이코테다/5. 이진탐색/7 이진탐색 이론.ipynb
@@ -163,8 +163,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "readline() 함수 사용\n",
     "- input() 함수는 시간이 오래 걸림  \n",
-    "- 입력 데이터가 많은 경우, sys 라이브러리의 readline() 함수 사용"
+    "- 입력 데이터가 많은 경우, sys 라이브러리의 readline() 함수 사용\n",
+    "- readline()으로 입력 시, 엔터가 줄 바꿈 기호로 입력되므로 이를 제거하기 위해 rstrip() 함수 사용"
    ]
   },
   {
