개선된 다익스트라 알고리즘
힙으로 구현한 우선순위 큐를 활용해 다익스트라 알고리즘의 속도 개선시킴

--- a/Book-이것이코테다/7. 최단 경로/9 최단 경로 이론.ipynb
+++ b/Book-이것이코테다/7. 최단 경로/9 최단 경로 이론.ipynb
@@ -15,6 +15,7 @@
     "1. 간단한 다익스트라 알고리즘  \n",
     "- 구현하기 쉽지만 느리게 동작함\n",
     "- 시간 복잡도: O(V^2) (V: 노드 개수)\n",
+    "- 노드의 개수가 10,000개를 넘어간다면 사용할 수 X\n",
     "- 매 단계마다 1차원 리스트를 '순차 탐색'하여 '방문 여부를 확인해 최단 거리가 가장 짧은 노드를 선택'함\n",
     "- 데이터 수가 많다는 가정 하에 sys 라이브러리의 sys.stdin.readline으로 입력받음\n",
     "- 모든 리스트는 (노드 개수 + 1)개로 설정해 노드 번호로 리스트에 접근 가능하게 함"
@@ -108,7 +109,172 @@
    "metadata": {},
    "source": [
     "2. 개선된 다익스트라 알고리즘  \n",
-    "- 구현하기 조금 까다롭지만 빠르게 동작하는 코드"
+    "- 구현하기 조금 까다롭지만 빠르게 동작하는 코드\n",
+    "- 우선 순위 큐 활용: 현재 방문하지 않은 노드 중, 가장 짧은 최단거리를 갖는 노드 선택 위함\n",
+    "- 시간 복잡도: O(ElogV)\n",
+    "\n",
+    "<우선 순위 큐로 구현한 다익스트라 알고리즘의 시간 복잡도>\n",
+    "-  현재 우선 순위 큐에서 꺼낸 노드와 연결된 다른 노드들을 확인하는 횟수는 최대 간선의 개수(E)만큼 수행함: O(ElogE)\n",
+    "- -> 간선이 중복될 수 없다면(갔다 오는 게 전부), 즉 최대 간선의 개수는 V^2개: O(Elog(V^2))\n",
+    "- -> O(2ElogV) ---> O(ElogV)\n",
+    "\n",
+    "<우선 순위 큐>\n",
+    "- 우선 순위가 높은 데이터가 가장 먼저 나옴\n",
+    "- 구현 방법: 1. 리스트, 2. 힙  \n",
+    "  \n",
+    "  |------------|  삽입시간  |  삭제시간  |  \n",
+    "  |------------|-----------|----------|\n",
+    "  |   리스트   |  O(1)  |O(N)  |  \n",
+    "  |   힙   |   O(logN)  |   O(logN)  |    \n",
+    "    \n",
+    "<힙(heap)>\n",
+    "- 최소힙: 작은 값 우선\n",
+    "- 최대힙: 큰 값 우선\n",
+    "- python의 heapq 라이브러리는 최소힙 우선, 최대힙은 별도 제공 X\n",
+    "- heappush(h, value), heappop(h) 함수로 데이터 삽입, 삭제함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 힙으로 오름차순 정렬\n",
+    "import heapq\n",
+    "\n",
+    "# 최소힙 구현\n",
+    "def heapsort(iterable):\n",
+    "    h = []          # 힙\n",
+    "    result = []     # 정렬 결과 저장을 위한 리스트\n",
+    "\n",
+    "    # 힙에 데이터 삽입\n",
+    "    for i in iterable:\n",
+    "        heapq.heappush(h, i)\n",
+    "\n",
+    "    # 힙에 저장한 데이터 불러오기\n",
+    "    for _ in range(len(h)):\n",
+    "        result.append(heapq.heappop(h))\n",
+    "\n",
+    "    # 정렬된 결과 출력\n",
+    "    return result\n",
+    "\n",
+    "array = [1, 3, 5, 7, 9, 2, 4, 6, 8, 0]\n",
+    "print(heapsort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 힙으로 내림차순 정렬\n",
+    "import heapq\n",
+    "\n",
+    "# 최대힙 구현\n",
+    "def heapsort_desc(iterable):\n",
+    "    h = []       # 힙\n",
+    "    result = []     # 정렬 결과 저장을 위한 리스트\n",
+    "\n",
+    "    # 최대힙\n",
+    "    for i in iterable:\n",
+    "        # 힙에 데이터 저장 (음수값으로 변경 후)\n",
+    "        heapq.heappush(h, -i)\n",
+    "\n",
+    "    # 힙에서 데이터 불러옴 (다시 양수값으로 변경)\n",
+    "    for _ in range(len(h)):\n",
+    "        result.append(-heapq.heappop(h))\n",
+    "\n",
+    "    # 정렬 결과 출력\n",
+    "    return result\n",
+    "\n",
+    "array = [1, 3, 5, 7, 9, 2, 4, 6, 8, 0]\n",
+    "print(heapsort_desc(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 개선된 다익스트라 알고리즘 구현\n",
+    "\n",
+    "# 초기 설정\n",
+    "import sys\n",
+    "input = sys.stdin.readline      # 입력 시간의 최소화\n",
+    "INF = int(1e9)      # 최대값 설정\n",
+    "\n",
+    "# 데이터 입력 받기\n",
+    "n, m = map(int, input().split())        # 노드, 간선의 수 입력 받기\n",
+    "start = int(input())                    # 시작 노드 번호 입력 받기\n",
+    "graph = [[] for _ in range(n + 1)]              # 그래프 초기화\n",
+    "for _ in range(m):      # 그래프의 노드, 비용 정보 입력\n",
+    "    s, e, c = map(int, input().split())\n",
+    "    graph[s].append((e, c))\n",
+    "\n",
+    "# 최단 거리 저장 리스트 초기화\n",
+    "distance = [INF] * (n + 1)\n",
+    "\n",
+    "\n",
+    "# 개선된 다익스트라 알고리즘 함수\n",
+    "def dijkstra_developed(start):\n",
+    "    q = []      # 우선순위 큐(힙으로 구현)\n",
+    "\n",
+    "    # 첫 번째 노드 거리 설정\n",
+    "    distance[start] = 0\n",
+    "    heapq.heappush(q, (0, start))\n",
+    "    now = start\n",
+    "\n",
+    "    # 현재 노드와 연결된 노드 꺼내서 거리 비교 후, 힙에 넣어줌\n",
+    "    while q:        # 큐가 비어있지 않다면\n",
+    "\n",
+    "        # 가장 최단 거리를 갖는 노드의 정보 꺼내기\n",
+    "        dist, now = heapq.heappop(q)\n",
+    "\n",
+    "        # 이미 처리한 적 있으면 무시\n",
+    "        if distance[now] < dist:\n",
+    "            continue\n",
+    "\n",
+    "        # 현재 노드와 연결된 다른 노드들 확인\n",
+    "        for node in graph[now]:\n",
+    "            cost = dist + node[1]\n",
+    "            # 현재 노드를 거쳐서, 다른 노드로 가는 경우가 더 빠른 경우\n",
+    "            if cost < distance[node[0]]:\n",
+    "                distance[node[0]] = cost\n",
+    "                heapq.heappush(q, (cost, node[0]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 다익스트라 알고리즘 수행\n",
+    "dijkstra_developed(start)\n",
+    "\n",
+    "# 모든 노드로 가기 위한 최단 거리 출력\n",
+    "for i in range(1, n + 1):\n",
+    "    \n",
+    "    # start에서 도달할 수 없는 노드의 경우, INFINITY 출력\n",
+    "    if distance[i] == INF:\n",
+    "        print('INFINITY')\n",
+    "    # start에서 도달할 수 있는 노드의 경우, 계산한 최단 거리 출력\n",
+    "    else:\n",
+    "        print(distance[i])"
    ]
   }
  ],
