--- a/Book-이것이코테다/7. 최단 경로/9 최단 경로 이론.ipynb
+++ b/Book-이것이코테다/7. 최단 경로/9 최단 경로 이론.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "최단 경로  \n",
+    "### 최단 경로  \n",
     "특정 지점가지 가장 빠르게 도달하는 방법을 찾는 알고리즘"
    ]
   },
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 간단한 다익스트라 알고리즘  \n",
+    "#### 1. 간단한 다익스트라 알고리즘  \n",
     "- 구현하기 쉽지만 느리게 동작함\n",
     "- 시간 복잡도: O(V^2) (V: 노드 개수)\n",
     "- 노드의 개수가 10,000개를 넘어간다면 사용할 수 X\n",
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. 개선된 다익스트라 알고리즘  \n",
+    "#### 2. 개선된 다익스트라 알고리즘  \n",
     "- 구현하기 조금 까다롭지만 빠르게 동작하는 코드\n",
     "- 우선 순위 큐 활용: 현재 방문하지 않은 노드 중, 가장 짧은 최단거리를 갖는 노드 선택 위함\n",
     "- 시간 복잡도: O(ElogV)\n",
@@ -218,6 +218,7 @@
     "# 개선된 다익스트라 알고리즘 구현\n",
     "\n",
     "# 초기 설정\n",
+    "import heapq\n",
     "import sys\n",
     "input = sys.stdin.readline      # 입력 시간의 최소화\n",
     "INF = int(1e9)      # 최대값 설정\n",
@@ -275,6 +276,66 @@
     "    # start에서 도달할 수 있는 노드의 경우, 계산한 최단 거리 출력\n",
     "    else:\n",
     "        print(distance[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 플로이드 워셜 (Floyd-Warshall) 알고리즘\n",
+    "- 모든 노드에서 다른 모든 노드까지의 최단 경로 계산\n",
+    "- 2차원 테이블 이용: 최단 거리, 정보 저장\n",
+    "- 다이나믹 프로그래밍 유형에 속함\n",
+    "- 시간 복잡도: O(N^3)\n",
+    "- 단계별로 거쳐가는 노드를 기준으로 수행. but, 매 단계마다 방문하지 않은 노드 중 최단거리 갖는 노드 찾는 과정 X\n",
+    "- 각 단계마다 특정 노드 k를 거쳐가는 경우 확인 (기존 s->d 경로보다 s->k->d 경로가 더 짧은지 검사)\n",
+    "- 점화식: D(s,d) = min(D(s, d), D(s, k) + D(k, d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 플로이드 워셜 알고리즘 구현\n",
+    "\n",
+    "# 초기 설정\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 입력 받기\n",
+    "n = int(input())    # 노드의 수\n",
+    "m = int(input())    # 간선의 수\n",
+    "\n",
+    "# 그래프 초기화 (2차원 리스트)\n",
+    "graph = [[INF] * (n + 1) for _ in range(n + 1)]\n",
+    "# 자기 자신에게 가는 노드 비용 0으로 초기화\n",
+    "for i in range(1, n + 1):\n",
+    "    for j in range(1, n + 1):\n",
+    "        if i == j:\n",
+    "            graph[i][j] = 0\n",
+    "\n",
+    "# 그래프의 노드 및 간선 비용 정보 입력받기\n",
+    "for _ in range(m):\n",
+    "    s, e, c = map(int, input().split())\n",
+    "    graph[s][e] = c\n",
+    "\n",
+    "# 점화식에 따라 플로이드 워셜 알고리즘 구현\n",
+    "for k in range(1, n + 1):\n",
+    "    for s in range(1, n + 1):\n",
+    "        for d in range(1, n + 1):\n",
+    "            graph[s][d] = min(graph[s][d], graph[s][k] + graph[k][d])\n",
+    "\n",
+    "# 수행한 경로 출력\n",
+    "for s in range(1, n + 1):\n",
+    "    for d in range(1, n + 1):\n",
+    "        # 노드 s->d 까지의 경로가 없다면, INFINITY 출력\n",
+    "        if graph[s][d] == INF:\n",
+    "            print('INFINITY', end=' ')\n",
+    "        # 노드 s->d 까지의 경로가 있다면, 최단 거리 출력\n",
+    "        else:\n",
+    "            print(graph[s][d], end=' ')\n",
+    "    print()"
    ]
   }
  ],
