--- a/Book-이것이코테다/8. 기타 그래프 이론/10 기타 그래프 이론.ipynb
+++ b/Book-이것이코테다/8. 기타 그래프 이론/10 기타 그래프 이론.ipynb
@@ -260,8 +260,215 @@
     "# 결과 출력\n",
     "if cycle:\n",
     "    print('사이클이 발생했습니다.')\n",
-    "else:\n",
+    "else: \n",
     "    print('사이클이 발생하지 않았습니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "신장 트리 (Spanning Tree)  \n",
+    "- 하나의 그래프에서, 모든 노드가 포함돼 있으면서 사이클(cycle)이 존재하지 않는 '부분 그래프'\n",
+    "- 모든 노드가 포함되어 서로 연결되면서 사이클이 존재하지 않는다는 조건은 트리의 성립 조건이기도 함  \n",
+    "  \n",
+    "\n",
+    "최소 신장 트리 알고리즘  \n",
+    "- 신장 트리 중 최소 비용으로 만들 수 있는 신장 트리를 찾는 알고리즘\n",
+    "- 간선의 개수는: (노드 개수) - 1\n",
+    "- 포함된 모든 간선의 비용 합: 최종 비용\n",
+    "  \n",
+    "\n",
+    "크루스칼 알고리즘 (Kruskal Algorithm)  \n",
+    "- 대표적인 최소 신장 트리 알고리즘  \n",
+    "- 그리디 알고리즘으로 분류됨  \n",
+    "- 모든 간선에 대해 정렬 수행 -> 거리가 가장 짧은 간선부터 집합에 포함 -> 사이클을 발생시키는 간선은 집합에 포함X\n",
+    "- 시간 복잡도: O(ElogE) \n",
+    "- (간선의 개수: E, 시간이 가장 오래 걸리는 부분인 간선 정렬 작업이며, 표준 라이브러리로 정렬 수행 시 시간 복잡도가 O(ElogE)이기 때문)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "크루스칼 알고리즘 구현\n",
+    "1. 간선 데이터를 비용에 따라 오름차순으로 정렬\n",
+    "2. 사이클이 발생여부에 따라 최소 신장 트리에 포함 - 발생 시, 집합에 포함X\n",
+    "3. 모든 간선에 대해 2번 반복"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "159\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 크루스칼 알고리즘 구현\n",
+    "\n",
+    "# 특정 원소가 포함되는지 확인 (경로 압축 사용)\n",
+    "def find_parent(parent, x):\n",
+    "\n",
+    "    # 루트 노드가 아니라면, 재귀적 호출\n",
+    "    if parent[x] != x:\n",
+    "        parent[x] = find_parent(parent,parent[x])\n",
+    "    return parent[x]\n",
+    "\n",
+    "# union 함수 생성\n",
+    "def union_parent(parent, a, b):\n",
+    "\n",
+    "    # 부모노드 찾기\n",
+    "    a = find_parent(parent, a)\n",
+    "    b = find_parent(parent, b)\n",
+    "\n",
+    "    # 더 작은 값을 부모노드로 설정, 부모노드 리스트 갱신\n",
+    "    if a < b:\n",
+    "        parent[b] = a\n",
+    "    else:\n",
+    "        parent[a] = b\n",
+    "\n",
+    "# 노드, 간선 (간선 정보)의 개수 입력받기\n",
+    "v, e = map(int, input().split())\n",
+    "\n",
+    "# 부모노드 초기화\n",
+    "parent = [0] * (v + 1)\n",
+    "for i in range(1, v + 1):\n",
+    "    parent[i] = i       # 자기 자신으로 부모노드 초기화\n",
+    "\n",
+    "# 모든 간선 정보 입력 받기 (비용 c, 시작 s, 끝 e)\n",
+    "edges = []\n",
+    "for _ in range(e):\n",
+    "    s, e, c = map(int, input().split())\n",
+    "    # 튜플의 첫 번째 요소가 정렬 기준이므로, 첫 번째에 비용 저장\n",
+    "    edges.append((c, s, e))\n",
+    "\n",
+    "# 간선을 비용순으로 정렬\n",
+    "edges.sort()\n",
+    "\n",
+    "# 최종 비용 변수 초기화\n",
+    "result = 0\n",
+    "\n",
+    "# 간선을 하나씩 확인하며 신장트리에 추가\n",
+    "for edge in edges:\n",
+    "    c, s, e = edge\n",
+    "     # 사이클이 발생하지 않는다면, 추가\n",
+    "    if find_parent(parent, s) != find_parent(parent, e):\n",
+    "        union_parent(parent, s, e)\n",
+    "        result += c\n",
+    "\n",
+    "# 최종 비용 출력\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위상 정렬 (Topology Sort)\n",
+    "- 순서가 정해져 있는 일련의 작업을 차례대로 수행해야 할 때 사용할 수 있는 알고리즘\n",
+    "- 사이클이 없는 방향 그래프 (Direct Acyclic Graph; DAG)의 모든 노드를 '방향성에 거스르지 않도록 순서대로 나열하는 것'\n",
+    "- 그래프상에서 선후 관계가 있다면, 위상 정렬을 수행해 모든 선후 관계를 지키는 전체 순서를 계산할 수 있음\n",
+    "\n",
+    "진입차수 (Indegree)\n",
+    "- 특정한 노드로 '들어오는' 간선의 개수\n",
+    "\n",
+    "진출차수 (Outdegree)\n",
+    "- 특정한 노드에서 '나가는' 간선의 개수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위상 정렬 알고리즘 구현 방법 (큐 이용)\n",
+    "- 진입차수 나타내는 리스트 작성\n",
+    "1. 진입차수가 0인 노드를 큐에 넣음\n",
+    "2. 큐가 빌 때까지 다음 과정 반복\n",
+    "   (1) 큐에서 원소를 꺼낸 후, 해당 노드에서 출발하는 간선을 그래프에서 제거함\n",
+    "   (2) 새롭게 진입차수가 0이 된 노드를 큐에 넣음\n",
+    "- 결과적으로, 각 노드가 큐에 들어온 순서 = 위상 정렬 결과\n",
+    "\n",
+    "위상 정렬 알고리즘 (큐 이용)의 특징\n",
+    "1. 사이클이 포함되지 않는 방향 그래프(DAG)에서만 수행 가능\n",
+    "2. 위상 정렬 알고리즘에는 답이 여러개일 수 있음\n",
+    "   - 큐에 새로 들어가는 원소가 2개 이상일 수 있으므로\n",
+    "3. 모든 원소를 방문하기 전(큐에서 원소가 v번 추출되기 전)에 큐가 빈다면, 사이클이 존재하는 것\n",
+    "   - 사이클이 존재하면, 모든 노드가 진입차수가 1 이상이 되므로 사이클에 포함된 원소들은 어느것도 큐에 들어갈 수 없음\n",
+    "4. 스택을 활용한 DFS를 이용해 위상 정렬 수행 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 5 3 6 4 7 "
+     ]
+    }
+   ],
+   "source": [
+    "# 위상 정렬 구현 (큐 이용)\n",
+    "\n",
+    "# 큐 라이브러리 호출\n",
+    "from collections import deque\n",
+    "\n",
+    "# 노드, 간선의 개수 입력받기\n",
+    "v, e = map(int, input().split())\n",
+    "\n",
+    "# 진입 차수 리스트 초기화\n",
+    "indegree = [0] * (v + 1)\n",
+    "\n",
+    "# 간선 정보 연결 리스트 초기화\n",
+    "graph = [[] for i in range(v + 1)]\n",
+    "\n",
+    "# 모든 간선의 정보 입력받기\n",
+    "# 연결된 정보 리스트, 진입 차수 리스트 갱신\n",
+    "for _ in range(e):\n",
+    "    s, e = map(int, input().split())\n",
+    "    graph[s].append(e)  # 그래프에서 s에서 e로 이동가능\n",
+    "    indegree[e] += 1    # e의 진입 차수 1 증가\n",
+    "\n",
+    "# 위상 정렬 함수 생성\n",
+    "def topology_sort():\n",
+    "    result = []     # 결과 저장 리스트\n",
+    "    q = deque()     # 큐 생성\n",
+    "\n",
+    "    # 진입 차수가 0인 노드 큐에 저장\n",
+    "    for i in range(1, v + 1):\n",
+    "        if indegree[i] == 0:\n",
+    "            q.append(i)\n",
+    "\n",
+    "    # 큐가 빌 때까지 반복\n",
+    "    while q:\n",
+    "        # 큐에서 원소 꺼냄\n",
+    "        now = q.popleft()\n",
+    "        result.append(now)    # 큐에서 꺼낸 요소 정렬 리스트에 넣기\n",
+    "\n",
+    "        # 현재 노드와 연결된 노드의 진입차수 0으로 변경\n",
+    "        for node in graph[now]:\n",
+    "            indegree[node] -= 1\n",
+    "\n",
+    "            # 새로 진입 차수가 0인 노드 큐에 저장\n",
+    "            if indegree[node] == 0:\n",
+    "                q.append(node)\n",
+    "\n",
+    "    # 위상 정렬 수행 결과 출력\n",
+    "    for i in result:\n",
+    "        print(i, end=' ')\n",
+    "\n",
+    "# 위상 정렬 수행\n",
+    "topology_sort()"
    ]
   }
  ],
